CAGRID-711: removed endorsed jars from websso
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/trunk/cagrid/Software/core@18016 dd7b0c16-3c94-4492-92de-414b6a06f0b1